# ha-openai-realtime

./: README.md  repository.json
openai_realtime_voice_agent/: CHANGELOG.md  DOCS.md  README.md  config.yaml  pyproject.toml
openai_realtime_voice_agent/app/: audio_recorder.py  audio_recording_service.py  conversation_tools.py  main.py  phase_emitter.py  raw_audio_serializer.py  session_manager.py  tool_safety.py  transcript_logger.py  websocket_handler.py
openai_realtime_voice_agent/root/: run.sh
openai_realtime_voice_agent/translations/: en.yaml  nl.yaml
